chore(Brewfile): add gcc library

--- a/Brewfile.tmpl
+++ b/Brewfile.tmpl
@@ -1,6 +1,8 @@
 tap "homebrew/bundle"
 tap "homebrew/cask"
 
+# GNU compiler collection
+brew "gcc"
 # Interpreted, interactive, object-oriented programming language
 brew "python@3.8"
 # Python version management
