chore: update chezmoi scripts

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -1,5 +1,6 @@
 {{ $taps := list
     "homebrew/cask"
+    "homebrew/cask-fonts"
 -}}
 
 {{ $brews := list
@@ -20,6 +21,7 @@
 
 {{ $casks := list
     "bitwarden"
+    "font-caskaydia-cove-nerd-font"
     "google-chrome"
     "rectangle"
     "scroll-reverser"
