--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -22,6 +22,7 @@
 {{ $casks := list
     "bitwarden"
     "font-caskaydia-cove-nerd-font"
+    "font-fira-code"
     "google-chrome"
     "rectangle"
     "scroll-reverser"
