chore: change fira code to nerd font
chore: add pyenv to zshrc

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -22,7 +22,7 @@
 {{ $casks := list
     "bitwarden"
     "font-caskaydia-cove-nerd-font"
-    "font-fira-code"
+    "font-fira-code-nerd-font"
     "google-chrome"
     "rectangle"
     "scroll-reverser"
