chore: add notion cask

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -24,6 +24,7 @@
     "font-caskaydia-cove-nerd-font"
     "font-fira-code-nerd-font"
     "google-chrome"
+    "notion"
     "rectangle"
     "scroll-reverser"
     "slack"
