chore: add docker

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -21,6 +21,7 @@
 
 {{ $casks := list
     "bitwarden"
+    "docker"
     "font-caskaydia-cove-nerd-font"
     "font-fira-code-nerd-font"
     "google-chrome"
