chore: change work to user prompt string

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,6 +1,6 @@
 {{- $email := promptString "email" -}}
-{{- $location := promptString "location" -}}
+{{- $user := promptString "user" -}}
 
 [data]
     email = "{{ $email }}"
-    location = "{{ $location }}"
+    user = "{{ $user }}"
