feat: add yubikey manager
feat: add yubikey manager

--- a/.chezmoiscripts/run_onchange_after_configure-mac.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-mac.sh.tmpl
@@ -57,4 +57,12 @@ done
 
 killall Dock
 
+###############################################################################
+# Yubikey                                                                     #
+###############################################################################
+
+# Disable <Enter> character
+
+# ykman otp settings --no-enter 1
+
 {{ end -}}
