--- a/.chezmoiscripts/run_onchange_after_configure-mac.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-mac.sh.tmpl
@@ -13,6 +13,13 @@ osascript -e 'tell application "System Preferences" to quit'
 sudo -v
 
 ###############################################################################
+# General UI/UX                                                               #
+###############################################################################
+
+# Disable the sound effects on boot
+sudo nvram SystemAudioVolume=" "
+
+###############################################################################
 # Finder                                                                      #
 ###############################################################################
 
