feat: replace exa with eza, upgrade python

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -6,7 +6,7 @@
 {{ $brews := list
     "awscli"
     "bat"
-    "exa"
+    "eza"
     "fzf"
     "gcc"
     "git"
@@ -18,7 +18,8 @@
     "postgresql"
     "pyenv"
     "pyenv-virtualenv"
-    "python@3.8"
+    "python@3.11"
+    "python@3.12"
     "terraform"
     "tree"
     "ykman"
