chore: add bpython + firefox

--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -6,6 +6,7 @@
 {{ $brews := list
     "awscli"
     "bat"
+    "bypthon"
     "eza"
     "fzf"
     "gcc"
@@ -29,6 +30,7 @@
     "1password"
     "bitwarden"
     "docker"
+    "firefox"
     "font-caskaydia-cove-nerd-font"
     "font-fira-code-nerd-font"
     "google-chrome"
