--- a/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
@@ -1,10 +1,17 @@
 {{ if and (eq .chezmoi.os "darwin" "linux") -}}
 
 {{ $extensions := list
-     "mhutchie.git-graph"
-     "ms-toolsai.jupyter"
+     "Gruntfuggly.todo-tree"
+     "HashiCorp.terraform"
+     "Tyriar.sort-lines"
      "eamodio.gitlens"
+     "mhutchie.git-graph"
+     "ms-azuretools.vscode-docker"
      "ms-python.vscode-pylance"
+     "ms-toolsai.jupyter"
+     "phoihos.csv-to-md-table"
+     "redhat.vscode-yaml"
+     "streetsidesoftware.code-spell-checker"
      "yzhang.markdown-all-in-one"
 -}}
 
