--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -21,19 +21,19 @@
 -}}
 
 {{ $casks := list
-    "1password"
-    "bitwarden"
     "docker"
     "font-caskaydia-cove-nerd-font"
     "font-fira-code-nerd-font"
-    "google-chrome"
     "notion"
     "rectangle"
     "scroll-reverser"
-    "slack"
     "spotify"
     "telegram"
-    "visual-studio-code"
+    # "1password"
+    # "bitwarden"
+    # "google-chrome"
+    # "slack"
+    # "visual-studio-code"
 -}}
 
 {{ if (eq .chezmoi.os "darwin") -}}
