--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -28,12 +28,15 @@
     "rectangle"
     "scroll-reverser"
     "spotify"
+-}}
+
+{{ $extras := list
     "telegram"
-    # "1password"
-    # "bitwarden"
-    # "google-chrome"
-    # "slack"
-    # "visual-studio-code"
+    "1password"
+    "bitwarden"
+    "google-chrome"
+    "slack"
+    "visual-studio-code"
 -}}
 
 {{ if (eq .chezmoi.os "darwin") -}}
