--- a/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
@@ -6,6 +6,7 @@
      "eamodio.gitlens"
      "ms-python.vscode-pylance"
      "yzhang.markdown-all-in-one"
+     "charliermarsh.ruff"
 -}}
 
 #!/bin/bash
