--- a/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_before_install-packages.sh.tmpl
@@ -1,5 +1,4 @@
 {{ $brews := list
-    "awscli"
     "bat"
     "eza"
     "fzf"
@@ -9,13 +8,9 @@
     "helm"
     "jupyterlab"
     "kubectl"
-    "poetry"
-    "postgresql"
-    "pyenv"
-    "pyenv-virtualenv"
+    "ruff"
     "python@3.11"
     "python@3.12"
-    "terraform"
     "tree"
     "ykman"
 -}}
